2016-11-18 Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* doc/options.imdoc, doc/config_files.imdoc, doc/benchmark.imdoc:
	Fixed some indentation in the documentation.

2016-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* acinclude.m4 (LIBS): Fix memory leaks in GM_FUNC_MMAP_FILEIO
	macro test-case so that it can be used successfully with ASAN
	compilation options.

	* magick/blob.c: Eliminate unused variable compiler warnings when
	HAVE_MMAP_FILEIO is not defined.

2016-10-24  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Ability to read multiple images from Matlab V4 format.

2016-10-21 Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	*coders/png.c (ReadOneJNGImage): Enforce spec requirement that
	the dimensions of the JPEG embedded in a JDAT chunk must match
	the JHDR dimensions.

	*doc/options.imdoc (-strip): Added a caution to not use the -strip
	option to remove author, copyright, and license information
	when redistributing an image that requires them to be retained.

	*doc/options.imdoc (-comment and -label): Document the fact that
	only one comment or label is stored, and how they are stored in
	PNG files.

2016-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): Adjusts some variable types and
	lessen the amount of casting.

2016-10-09 Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadJNGImage): Quiet COVERITY issue about
	a potential memory leak.

2016-10-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Fix memory leak of layer_info for
	some recently added error-return paths.

2016-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): For RLE SGI image, defer memory
	allocations for as long as possible and allow the file to prove
	itself worthy before making the largest allocations.  This helps
	with rejecting bogus RLE files while avoiding rejecting valid
	files.
