@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x181501
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 18,15,1
-#define MagickChangeDate   "20161118"
-#define MagickReleaseDate  "snapshot-20161118"
+#define MagickChangeDate   "20161126"
+#define MagickReleaseDate  "snapshot-20161126"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
