@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2016-11-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/gif.c (DecodeImage): Applied fixes by Tianyu Lang for
+&quot;Excessive LZW string data&quot; problem leading to &quot;Corrupt image&quot;
+report while reading some GIF files.</li>
+</ul>
+</blockquote>
 <p>2016-11-18 Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
